[package]
name = "docker-credential-secretsmanager"
version = "0.1.1"
authors = ["Peter Salvatore <peter@psftw.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6"
envy = "0.4"
rusoto_core = "0.39.0"
rusoto_secretsmanager = "0.39.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "0.7", features = ["v4"] }
